# phishing_triage_env

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_test.py  run_validation.sh  validate-submission.sh
server/: __init__.py  app.py  environment.py
