[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-triage-env"
version = "0.1.0"
description = "Phishing Email Triage Analyst Environment for OpenEnv"
authors = [
    { name = "Hackathon Participant" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "requests==2.31.0",
    "huggingface-hub",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
