[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phishing-triage-env"
version = "1.0.0"
description = "OpenEnv-compliant SaaS Invoice Collection RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.3",
    "openai>=1.14.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
# openenv validate requires a 'server' entry point pointing to main()
server = "server.app:main"
